fixed cor errors